Set login background image via template

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}" />
+    <style>
+        body {
+            background-image: url("{{ url_for('static', filename='home.jpg') }}");
+        }
+    </style>
 </head>
 <body>
     <main>
